--- a/views/addproduct.ejs
+++ b/views/addproduct.ejs
@@ -11,12 +11,30 @@
 
     <style>
         input[type="text"] {
-            width: 50%;
+            width: 75%;
         }
         
         textarea[type="textarea"] {
-            width: 50%;
+            width: 75%;
         }
+        /* Responsive layout - makes a two column-layout instead of four columns */
+        @media screen and (max-width: 800px) {
+            .column {
+                -ms-flex: 50%;
+                flex: 50%;
+                max-width: 50%;
+            }
+        }
+
+        /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+        @media screen and (max-width: 600px) {
+            .column {
+                -ms-flex: 100%;
+                flex: 100%;
+                max-width: 100%;
+            }
+        }
+
     </style>
 </head>
 
@@ -27,8 +45,8 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-6">
-                <div class="container">
+            <div class="container">
+                <div class="col-md-6">
                     <form method="post" action="/addproduct">
                         <div class="form-group">
                             <label for="editProductId"> Mã sản phẩm </label>
@@ -68,12 +86,32 @@
                         <button type="submit" class="btn btn-primary">Thêm</button>
                     </form>
                 </div>
-            </div>
-            <div style="margin-top: 15px;" class="col-6">
-
+                <div class="col-md-6">
+                    <% for(var i=0;i<images.length; i++) {%>
+                        <div class="col-sm-12 col-lg-6">
+                            <img src="<%= images[i].name %>" onclick="sendurl(this)" style="margin-top: 5px; width:100%">
+                        </div>
+                    <% } %>
+                </div>
             </div>
         </div>
     </div>
+
+    <script>
+
+        function getImgName(url){
+            var index = url.lastIndexOf("/") + 1;
+            var filename = url.substr(index);
+            return filename;
+        }
+
+        function sendurl(img){
+            var url = img.src;
+            var filename = getImgName(url);
+            document.getElementById('editProductImage').value = filename;
+        }
+
+    </script>
 </body>
 
 </html>
