--- a/views/header.ejs
+++ b/views/header.ejs
@@ -47,7 +47,8 @@
                         <li><a href="producttable">Quản lý sản phẩm</a></li>
                         <li><a href="summary">Thống kê</a></li>
                         <li><a href="campaign">Chiến dịch bán hàng</a></li>
-                        <li><a href="upload">Upload</a></li>
+                        <li><a href="uploadbanner">Upload banner</a>
+                        <li><a href="upload">Upload product</a></li>
                         <li><a href="updatedb">Update database</a></li>
                     </ul>
                 </li>   
