--- a/views/slideshow.ejs
+++ b/views/slideshow.ejs
@@ -1,13 +1,34 @@
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="item active">
-            <img src="/assets/ao2.png" alt="First slide">
+            <img src="/banner/bn1.jpeg">
         </div>
         <div class="item">
-            <img src="/assets/ao2.png" alt="Second slide">
+            <img src="/banner/bn2.jpeg">
         </div>
         <div class="item">
-            <img src="/assets/ao2.png" alt="Third slide">
+            <img src="/banner/bn3.jpeg">
+        </div>
+        <div class="item">
+            <img src="/banner/bn4.jpeg">
+        </div>
+        <div class="item">
+            <img src="/banner/bn5.jpeg">
+        </div>
+        <div class="item">
+            <img src="/banner/bn6.jpeg">
+        </div>
+        <div class="item">
+            <img src="/banner/bn7.jpeg">
+        </div>
+        <div class="item">
+            <img src="/banner/bn8.jpeg">
+        </div>
+        <div class="item">
+            <img src="/banner/bn9.jpeg">
+        </div>
+        <div class="item">
+            <img src="/banner/bn10.jpeg">
         </div>
     </div>
     <a class="left carousel-control" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -22,6 +43,7 @@
 
 <script>
     $('.carouselExampleIndicators').carousel({
-        interval: 2000
+        interval: 1500
     });
+
 </script>
