git update banner page

--- a/views/notfound404.ejs
+++ b/views/notfound404.ejs
@@ -2,18 +2,25 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>League store 77</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
         body {
             background-image: url('/icon/error-404.png');
             background-repeat: no-repeat;
             background-attachment: fixed;
-            background-size: 100% 100%;
+            background-size: 50% 50%;
+            background-position: center;
         }
     </style>
 </head>
 
 <body>
-    <a href="home">Click here to back HOME page</a>
+    <a href="home" class="btn btn-outline-danger">Click here to back HOME page</a>
 </body>
 
 </html>
