--- a/views/updatedb.ejs
+++ b/views/updatedb.ejs
@@ -16,10 +16,10 @@
 </head>
 
 <body>
-  <h1 style="text-align: center;">Cập nhật dữ liệu vào Database</h1>
-  <form action="updatedb" method="POST">
-    <input style="margin-top: 100px; margin-left: 45%;" class="btn btn-success btn-lg" type="submit" value="Update database">
-  </form>
+    <h1 style="text-align: center;">Cập nhật dữ liệu vào Database</h1>
+    <form action="updatedb" method="POST">
+        <input style="margin-top: 100px; margin-left: 45%;" class="btn btn-success btn-lg" type="submit" value="Cập nhật dữ liệu">
+    </form>
 </body>
 
 </html>
