--- a/views/adduser.ejs
+++ b/views/adduser.ejs
@@ -10,20 +10,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
     <style>
+        input[type="password"],
+        input[type="email"],
         input[type="text"] {
-            width: 50%;
-        }
-        
-        input[type="email"] {
-            width: 50%;
-        }
-        
-        input[type="password"] {
-            width: 50%;
-        }
-        
-        textarea[type="textarea"] {
-            width: 50%;
+            width: 75%;
         }
         
         .wrapper {
@@ -33,7 +23,7 @@
             justify-content: center;
             width: 100%;
             min-height: 100%;
-            padding: 20px;
+            padding: 10px;
         }
         
         #formContent {
@@ -42,7 +32,7 @@
             background: #fff;
             padding: 30px;
             width: 90%;
-            max-width: 450px;
+            max-width: 500px;
             position: relative;
             padding: 0px;
             -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
@@ -84,33 +74,33 @@
         <div class="formContent">
             <form method="POST" action="/adduser">
                 <div class="form-group">
-                    <label for="editUserId"> User ID </label>
-                    <input type="text" name="userId" class="form-control" id="editUserId" placeholder="Id">
+                    <label for="editUserId"> User ID </label><br>
+                    <input type="text" name="userId" class="form-control" id="editUserId" placeholder="Id"><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="editUserName">User Name</label>
-                    <input type="text" name="name" class="form-control" id="editUserName" placeholder="Tên tài khoản">
+                    <label for="editUserName">User Name</label><br>
+                    <input type="text" name="name" class="form-control" id="editUserName" placeholder="Tên tài khoản"><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="editUserPassword">Password</label>
-                    <input type="text" id="editUserPassword" name="password" class="form-control" placeholder="Mật khẩu">
+                    <label for="editUserPassword">Password</label><br>
+                    <input type="text" id="editUserPassword" name="password" class="form-control" placeholder="Mật khẩu"><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="editUserAddress">Address</label>
-                    <input type="text" name="addr" class="form-control" id="editUserAddress" placeholder="Địa chỉ">
+                    <label for="editUserAddress">Address</label><br>
+                    <input type="text" name="addr" class="form-control" id="editUserAddress" placeholder="Địa chỉ"><br>
                 </div>
 
                 <div class="form-group">
                     <label for="editUserEmail">Mail</label><br>
-                    <input type="email" name="email" class="form-control" id="editUserEmail" placeholder="Thư điện tử">
+                    <input type="email" name="email" class="form-control" id="editUserEmail" placeholder="Thư điện tử"><br>
                 </div>
 
                 <div class="form-group">
-                    <label for="editUserPhone">Phone number</label>
-                    <input type="text" name="phone" class="form-control" id="editUserPhone" placeholder="Điện thoại">
+                    <label for="editUserPhone">Phone number</label><br>
+                    <input type="text" name="phone" class="form-control" id="editUserPhone" placeholder="Điện thoại"><br>
                 </div>
 
                 <button type="submit" class="btn btn-primary">Add</button>
