--- a/views/slideshow.ejs
+++ b/views/slideshow.ejs
@@ -1,4 +1,4 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselIndicators" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="item active">
             <img src="/banner/bn1.jpeg">
@@ -31,19 +31,18 @@
             <img src="/banner/bn10.jpeg">
         </div>
     </div>
-    <a class="left carousel-control" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <a class="left carousel-control" href="#" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <a class="right carousel-control" href="#" role="button" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
 </div>
 
 <script>
-    $('.carouselExampleIndicators').carousel({
+    $('.carouselIndicators').carousel({
         interval: 1500
     });
-
 </script>
