--- a/views/header.ejs
+++ b/views/header.ejs
@@ -59,6 +59,10 @@
                             <button class="btn btn-outline-success my-2 my-sm-0" type="submit"> Tìm kiếm </button>
                         </form>
                     </li>
+
+                    <li>
+                        <a href="cart"><span class="glyphicon glyphicon-cart"></span> Giỏ hàng</a>
+                    </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li>
