--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,88 +1,155 @@
-<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+    .sidenav {
+            height: 100%;
+            width: 0;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: 0;
+            background-color: #FFF;
+            overflow-x: hidden;
+            transition: 0.5s;
+            padding-top: 60px;
+        }
 
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">LEAGUE STORE 77</a>
-        </div>
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Trang chủ</a></li>
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Sản phẩm<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Quần áo</a></li>
-                    <li><a href="#">Quần áo thể thao</a></li>
-                    <li><a href="#">Phụ kiện</a></li>
-                </ul>
-            </li>
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Bộ sưu tập<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Hè</a></li>
-                    <li><a href="#">Thu đông</a></li>
-                    <li><a href="#">Phụ kiện</a></li>
-                </ul>
-            </li>
+        .sidenav a {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 25px;
+            color: #818181;
+            display: block;
+            transition: 0.3s;
+        }
 
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Giải đấu<span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Ngoại hạng anh</a></li>
-                    <li><a href="#">La Liga</a></li>
-                    <li><a href="#">Bundesliga</a></li>
-                    <li><a href="#">League 1</a></li>
-                    <li><a href="#">Seria A</a></li>
-                    <li><a href="#">World cup</a></li>
-                    <li><a href="#">UEFA Champions league</a></li>
-                    <li><a href="#">UEFA Europa league</a></li>
-                    <li><a href="#">Euro</a></li>
-                </ul>
-            </li>
+        .sidenav a:hover {
+            color: #f1f1f1;
+        }
 
-            <li><a href="contact">Liên hệ</a></li>
+        .sidenav .closebtn {
+            position: absolute;
+            top: 0;
+            right: 25px;
+            font-size: 36px;
+            margin-left: 50px;
+        }
 
-            <% if(user !== "Đăng nhập") {%>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Quản lý<span class="caret"></span></a>
+        @media screen and (max-height: 450px) {
+            .sidenav {padding-top: 15px;}
+            .sidenav a {font-size: 18px;}
+        }
+</style>
+</head>
+<body>
+    <nav class="navbar navbar-dark bg-dark" style="background-color: #FFF;">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/" style="color: black;">LEAGUE STORE 77</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/" style="color: black;">TRANG CHỦ</a></li>
+                <li>
+                    <a href="/newarrivals" style="color: black;">NEW ARRIVAL</a>
+                </li>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color: black;">SẢN PHẨM<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="admin">Quản lý người dùng</a></li>
-                        <li><a href="producttable">Quản lý sản phẩm</a></li>
-                        <li><a href="summary">Thống kê</a></li>
-                        <li><a href="campaign">Chiến dịch bán hàng</a></li>
-                        <li><a href="uploadbanner">Upload banner</a></li>
-                        <li><a href="upload">Upload product</a></li>
-                        <li><a href="updatedb">Update database</a></li>
+                        <li><a href="#" style="color: black;">QUẦN ÁO</a></li>
+                        <li><a href="#" style="color: black;">QUẦN ÁO THỂ THAO</a></li>
+                        <li><a href="#" style="color: black;">PHỤ KIỆN</a></li>
                     </ul>
-                </li>   
+                </li>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color: black;">BỘ SƯU TẬP<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#" style="color: black;">HÈ</a></li>
+                        <li><a href="#" style="color: black;">THU ĐÔNG</a></li>
+                        <li><a href="#" style="color: black;">PHỤ KIỆN</a></li>
+                    </ul>
+                </li>
+    
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color: black;">GIẢI ĐẤU<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#" style="color: black;">NGOẠI HẠNG ANH</a></li>
+                        <li><a href="#" style="color: black;">LA LIGA</a></li>
+                        <li><a href="#" style="color: black;">BUNDES LIGA</a></li>
+                        <li><a href="#" style="color: black;">LEAGUE 1</a></li>
+                        <li><a href="#" style="color: black;">SERI A</a></li>
+                        <li><a href="#" style="color: black;">WORLD CUP</a></li>
+                        <li><a href="#" style="color: black;">UEFA CHAMPIONS LEAGUE</a></li>
+                        <li><a href="#" style="color: black;">UEFA EUROPA LEAGUE</a></li>
+                        <li><a href="#" style="color: black;">EURO</a></li>
+                    </ul>
+                </li>
+    
+                <li><a href="/contact" style="color: black;">LIÊN HỆ</a></li>
+    
+                <li><a href="/news" style="color: black;">NEWS</a></li>
+    
+                <% if(user !== "Đăng nhập") {%>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color: black;">QUẢN LÝ<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/admin">Quản lý người dùng</a></li>
+                            <li><a href="/producttable">Quản lý sản phẩm</a></li>
+                            <li><a href="/summary">Thống kê</a></li>
+                            <li><a href="/campaign">Chiến dịch bán hàng</a></li>
+                            <li><a href="/uploadbanner">Upload banner</a></li>
+                            <li><a href="/upload">Upload product</a></li>
+                            <li><a href="/updatedb">Update database</a></li>
+                        </ul>
+                    </li>   
                 <%}%>
-                    <li>
-                        <form style="margin-top: 7.5px;" class="form-inline my-2 my-lg-0">
-                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit"> Tìm kiếm </button>
-                        </form>
-                    </li>
-
-                    <li>
-                        <a href="cart"><span class="glyphicon glyphicon-cart"></span> Giỏ hàng</a>
-                    </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <li>
-                <a href="signup"><span class="glyphicon glyphicon-user"></span> Đăng ký</a>
-            </li>
-            <li class="dropdown">
-                <% if(user !== "Đăng nhập") { %>
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <%= user %><span class="caret"></span></a>
+    
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="/signup"><span class="glyphicon glyphicon-user" style="color: black;"></span></a>
+                </li>
+                <li class="dropdown">
+                    <% if(user !== "Đăng nhập") { %>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color: black;">
+                            <%= user %><span class="caret" style="color: black;"></span></a>
                     <% } else { %>
-                        <a href="login">
-                            <%= user %><span class="caret"></span></a>
-                        <% } %>
+                        <a href="/login" style="color: black;">
+                            <%= user %><span class="caret" style="color: black;"></span></a>
+                    <% } %>
+    
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="/home"><span class="glyphicon glyphicon-log-in" style="color: black;"></span> ĐĂNG XUẤT </a>
+                        </li>
+                    </ul>
+    
+                    <li>
+                        <a href="/cart"  style="color: black;"><span></span> GIỎ HÀNG</a>
+                    </li>
+    
+                    <li>
+                        <div id="mySidenav" class="sidenav">
+                            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                            <form style="margin-top: 7.5px;" class="form-inline my-2 my-lg-0">
+                                <h3 style="text-align: center;"> TÌM KIẾM </h3>
+                                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="margin-left: 10px;">
+                                <button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="margin-top: 5px; margin-left: 10px;"> Tìm kiếm </button>
+                            </form>
+                        </div>
+                        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+                    </li>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    
+    <script>
+        function openNav() {
+        document.getElementById("mySidenav").style.width = "250px";
+        }
 
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="home"><span class="glyphicon glyphicon-log-in"></span> Đăng xuất </a>
-                                </li>
-                            </ul>
-            </li>
-        </ul>
-    </div>
-</nav>
+        function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+        }
+    </script>
+</body>
+</html>
+
