--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,10 +67,80 @@
         .hover-shadow:hover {
             box-shadow: 0 4px 8px 0 rgba(243, 238, 238, 0.2), 0 6px 20px 0 rgba(231, 221, 221, 0.19);
         }
+
+        .dropdown a:hover{
+            text-decoration: underline;
+        }
+
+        .row{
+            margin-right: -15px;
+            margin-left: -15px;
+        }
+
+        .container-fluid {
+            padding-right: 15px;
+            padding-left: 15px;
+            margin-right: auto;
+            margin-left: auto;
+        }
+
+        #topbar {background: #7F7F7F ;font-size: 12px; color: #FFFF}
+        #topbar p {padding: 4px 0;margin-bottom:0;}
+        .topbar-hotline a.phone-num { display: inline-block;}
+        .topbar-hotline {text-align: right;margin: 3.5px 0 0;}
+        .topbar-hotline span.text-phone{color:#FFFF;font-weight:bold;letter-spacing:0.4px;}
+        .topbar-hotline span.circle-phone{
+            display: inline-block;border-radius: 50%;
+            -webkit-animation: ripple 1.0s linear infinite;
+            animation: ripple 1.0s linear infinite;
+        }
+        .topbar-hotline a.phone-num .fa {
+            width: 35px;
+            height: 35px;
+            line-height: 35px;
+            border-color:#e00000;
+            color:#e00000;
+            font-size: 16px;	 margin: 0;	
+        }
+        .topbar-hotline a.phone-num .fa {
+            width: 22px;
+            height: 22px;
+            line-height: 22px;
+            border: 1px solid #FFFF;
+            color: #FFFF;
+            border-radius: 50%;
+            text-align: center;
+            animation: 1s ease-in-out 0s normal none infinite running h-alo-ring-ring;
+            font-size: 10px;
+            display: inline-block;
+            vertical-align: middle;margin-right:5px;
+        }
+        @keyframes h-alo-ring-ring{0%{transform:rotate(0deg) scale(1) skew(1deg)}10%{transform:rotate(-25deg) scale(1) skew(1deg)}20%{transform:rotate(25deg) scale(1) skew(1deg)}30%{transform:rotate(-25deg) scale(1) skew(1deg)}40%{transform:rotate(25deg) scale(1) skew(1deg)}50%{transform:rotate(0deg) scale(1) skew(1deg)}100%{transform:rotate(0deg) scale(1) skew(1deg)}}
     </style>
 </head>
 
 <body>
+    <div id="topbar">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6 col-sm-6 col-xs-12 topbar-content">
+                    <p>
+                        <strong> Miễn phí </strong>
+                        giao hàng toàn quốc với đơn hàng
+                        <strong> trên 500k </strong>
+                    </p>
+                </div>
+                <div class="col-md-6 col-sm-6 col-xs-12 topbar-hotline">
+                    <a class="phone-num" href="tel:0123456789"></a>
+                    <span class="circle-phone">
+                        <i class="fa fa-phone"></i>
+                    </span>
+                    <span class="text-phone">Hot line: 0123456789</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <%- include ('header'); -%>
     <%- include ('slideshow') -%>
         
@@ -82,39 +152,38 @@
                         <%for(var i=0; i<product.length;i++) { %>
                             <div class="col-sm-12 col-lg-4">
                                 <div class="card h-100">
-                                    <img class="card-img-top" src="<%= product[i].image %>" alt="Card image cap">
+                                    <a href="/productdetail/<%= product[i]._id %>" >
+                                        <img class="card-img-top" src="<%= product[i].image %>" alt="Card image cap" >
+                                    </a>
                                     <div class="card-body">
                                         <h5 class="card-title">
                                             <%= product[i].name %>
                                         </h5>
                                         <p class="card-text">
                                             <% if(product[i].bonusPrice > 0) { %>
-                                                <p class="line-through">
-                                                    <%= product[i].price.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
-                                                </p>
-                                                <p class="none">
-                                                    <%= product[i].bonusPrice.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
+                                                <p>
+                                                    <span class="line-through" style="font-size: 85%;">
+                                                        <%= product[i].price.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
+                                                    </span>    
+                                                    <span class="none" style="font-weight: 550;">
+                                                        <%= product[i].bonusPrice.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
+                                                    </span>
                                                 </p>
 
                                                 <% } else { %>
-                                                    <p class="normal">
-                                                        <%= product[i].price.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
+                                                    <p>
+                                                        <span class="normal">
+                                                            <%= product[i].price.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
+                                                        </span>
                                                     </p>
-                                                    <% } %>
+                                            <% } %>
                                         </p>
-                                    </div>
-                                    <div class="card-footer">
-                                        <a href="/productdetail/<%= product[i]._id %>" class="btn btn-primary btn-sm">Chi tiết</a>
-                                        <a href="#" class="btn btn-success btn-sm">
-                                            <img src="/assets/carts.png" />
-                                        </a>
                                     </div>
                                 </div>
                             </div>
                             <% } %>
-                                <%}%>
+                        <%}%>
                 </div>
-
             </div>
 
             <div class="container">
@@ -130,18 +199,13 @@
                                     <%= i %>
                                 </a>
                             </li>
-                            <% } %>
-                                <li class="page-item">
-                                    <a class="page-link" href="#">Next</a>
-                                </li>
+                        <% } %>
+                        <li class="page-item">
+                            <a class="page-link" href="#">Next</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
-            <script type="text/javascript">
-                function change_page(page_number) {
-
-                }
-            </script>
 
             <h2 class="populate_product">SẢN PHẨM BÁN CHẠY</h2>
 
@@ -151,37 +215,37 @@
                         <%for(var i=0; i<product.length;i++) { %>
                             <div class="col-sm-12 col-lg-4">
                                 <div class="card h-100">
-                                    <img class="card-img-top" src="<%= product[i].image %>" alt="Card image cap">
+                                    <a href="/productdetail/<%= product[i]._id %>" >
+                                        <img class="card-img-top" src="<%= product[i].image %>" alt="Card image cap" >
+                                    </a>
                                     <div class="card-body">
                                         <h5 class="card-title">
                                             <%= product[i].name %>
                                         </h5>
                                         <p class="card-text">
                                             <% if(product[i].bonusPrice > 0) { %>
-                                                <p class="line-through">
-                                                    <%= product[i].price.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
-                                                </p>
-                                                <p class="none">
-                                                    <%= product[i].bonusPrice.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
+                                                <p>
+                                                    <span class="line-through" style="font-size: 85%;">
+                                                        <%= product[i].price.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
+                                                    </span> 
+                                                    <span class="none" style="font-weight: 550;">
+                                                        <%= product[i].bonusPrice.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
+                                                    </span>
                                                 </p>
 
                                                 <% } else { %>
-                                                    <p class="normal">
-                                                        <%= product[i].price.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
+                                                    <p>
+                                                        <span class="normal">
+                                                            <%= product[i].price.toLocaleString('it-IT', {style : 'currency', currency : 'VND'}); %>
+                                                        </span>
                                                     </p>
-                                                    <% } %>
+                                            <% } %>
                                         </p>
-                                    </div>
-                                    <div class="card-footer">
-                                        <a href="/productdetail/<%= product[i]._id %>" class="btn btn-primary btn-sm">Chi tiết</a>
-                                        <a href="#" class="btn btn-success btn-sm">
-                                            <img src="/assets/carts.png" />
-                                        </a>
                                     </div>
                                 </div>
                             </div>
-                            <% } %>
-                                <% } %>
+                        <% } %>
+                    <% } %>
                 </div>
 
             </div>
@@ -199,10 +263,10 @@
                                     <%= i %>
                                 </a>
                             </li>
-                            <% } %>
-                                <li class="page-item">
-                                    <a class="page-link" href="#">Next</a>
-                                </li>
+                        <% } %>
+                        <li class="page-item">
+                            <a class="page-link" href="#">Next</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -219,7 +283,7 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="card">
-                                <a href="sendemail">
+                                <a href="/sendemail">
                                     <img class="hover-shadow cursor" src="/icon/email.png" alt="Card image cap">
                                 </a>
                                 <div class="card-body">
